--- a/API/package.json
+++ b/API/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.19.2",
     "nodemailer": "^7.0.10",
     "qrcode": "^1.5.4",
-    "qrcode-reader": "^1.0.4"
+    "qrcode-reader": "^1.0.4",
+    "socket.io": "^4.8.1"
   }
 }
