--- a/API/package.json
+++ b/API/package.json
@@ -39,6 +39,8 @@
     "@types/node": "^24.10.1",
     "@types/socket.io": "^3.0.1",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.9.3"
   }
 }
