--- a/API/package.json
+++ b/API/package.json
@@ -6,10 +6,10 @@
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "migration:run": "npm run typeorm -- migration:run -d ./src/data-source.ts",
-    "migration:generate": "npm run typeorm -- migration:generate ./src/database/migration/SchemaMigration -d ./src/data-source.ts",
-    "migration": "npm run migration:run"
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migration:generate": "npm run typeorm -- migration:generate src/database/migration/SchemaMigration -d src/config/data-source.ts",
+    "migration:run": "npm run typeorm -- migration:run -d ./src/config/data-source.ts",
+    "migration:revert": "npm run typeorm --migration:revert -d src/config/data-source.ts"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +23,7 @@
     "helmet": "^8.1.0",
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.11",
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "socket.io": "^4.8.1",
@@ -37,6 +38,7 @@
     "@types/joi": "^17.2.2",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
+    "@types/nodemailer": "^7.0.4",
     "@types/socket.io": "^3.0.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
